--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Lambda School Newsfeed</title>
+    <title>Newsfeed</title>
     <link rel="stylesheet" type="text/css" media="screen" href="./CSS/index.css" />
     <script src="./Menu/Menu.js" async></script>
     <script src="./Article/Article.js" async></script>
@@ -228,7 +228,7 @@
   <body>
     <div class="header">
       <img class="menu-button" src="./assets/menu.png"/>
-      <h1>Lambda School Newsfeed</h1>
+      <h1> Newsfeed</h1>
     </div>
     <div class="articles"></div>
   </body>
